--- a/src/css/main.module.css
+++ b/src/css/main.module.css
@@ -72,10 +72,8 @@
 }
 
 .sidebar_master_notify_icon {
-  width: 8px !important;
-  height: 8px !important;
-  font-size: 1.2em !important;
-  padding: 8px !important;
+  position: absolute !important;
+  right: 16px !important;
   color: darkred !important;
 }
 
