feat: grade level i18n

--- a/src/css/card.module.css
+++ b/src/css/card.module.css
@@ -51,6 +51,7 @@
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
+  line-height: 1.2em;
 }
 
 .card_course {
@@ -60,6 +61,7 @@
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
+  line-height: 1.2em;
 }
 
 .card_action_line {
