--- a/src/css/main.module.css
+++ b/src/css/main.module.css
@@ -52,7 +52,7 @@
   background: #f6f6f6;
 }
 
-[data-mui-color-scheme='dark'] .sidebar_cards {
+[data-dark] .sidebar_cards {
   background: #0a0a0a;
 }
 
@@ -146,7 +146,7 @@
   background-color: #eee;
 }
 
-[data-mui-color-scheme='dark'] .pane_content {
+[data-dark] .pane_content {
   background-color: #111;
 }
 
