fix: course list arrow size
close #165

--- a/src/css/list.module.css
+++ b/src/css/list.module.css
@@ -9,6 +9,10 @@
   height: 40px !important;
 }
 
+.sidebar_list_item_arrow {
+  min-width: 0 !important;
+}
+
 .course_list_item_text,
 .settings_list_item_text {
   padding-left: 0 !important;
