--- a/src/css/doc.module.css
+++ b/src/css/doc.module.css
@@ -1,12 +1,12 @@
 .wrapper {
   flex-grow: 1;
-  font: 16px / 1.5 Helvetica, 'Source Han Sans SC', 'Noto Sans CJK SC', 'Microsoft Yahei',
-    'Hiragino Sans GB', sans-serif;
-  background: url('../image/creampaper.png');
+  font: 16px / 1.5 Helvetica, "Source Han Sans SC", "Noto Sans CJK SC", "Microsoft Yahei",
+    "Hiragino Sans GB", sans-serif;
+  background: url("../image/creampaper.png");
 }
 
 [data-dark] .wrapper {
-  background: url('../image/creampaper_black.png');
+  background: url("../image/creampaper_black.png");
 }
 
 .wrapper a {
@@ -72,12 +72,12 @@
 
 .welcome_version {
   font-size: 0.9em;
-  font-family: 'JetBrains Mono', 'Fira Code Retina', consolas, monospace;
+  font-family: "JetBrains Mono", "Fira Code Retina", consolas, monospace;
 }
 
 .welcome_packages {
   font-size: 0.8em;
-  font-family: 'JetBrains Mono', 'Fira Code Retina', consolas, monospace;
+  font-family: "JetBrains Mono", "Fira Code Retina", consolas, monospace;
 }
 
 .welcome_footer {
@@ -198,7 +198,7 @@
 
 .doc_image_block:before,
 .doc_image_block:after {
-  content: ' ';
+  content: " ";
   display: table;
 }
 
